updates most of the files